--- a/src/main/resources/templates/admin/categories.html
+++ b/src/main/resources/templates/admin/categories.html
@@ -47,27 +47,62 @@
                             <input type="submit" value="+" />
                        </div>
                     </form>
+                    <form method="post" th:action="@{/data/add/style}">
+                        <div class="style_text_box">
+                            <input type="text" required="required" name="styleName" placeholder="style" />
+                            <input type="hidden" name="categoryId" th:value="${item.id}" />
+                        </div>
+                        <div class="style_submit_button">
+                            <input type="submit" value="+" />
+                        </div>
+                    </form>
                 </div>
             </div>
+
             <div class="subItem">
+                sub-categories:
                 <div th:each="subCat : ${types}" th:style="${subCat.categoryId != item.id}? 'display: none;'">
                     <div th:if="${subCat.categoryId == item.id}">
-                        <div th:unless="${subCat.sortId == 1}"><a th:href="'categories/' + ${subCat.categoryId} + '/' + ${subCat.sortId} + '/moveup'">&#8827;</a></div>
+                        <div th:unless="${subCat.sortId == 1}"><a th:href="'categories/type/' + ${subCat.categoryId} + '/' + ${subCat.sortId} + '/moveup'">&#8827;</a></div>
                         <div>
                             <div th:if="${subCat.hidden == 'no'}">
-                                <form th:action="${'categories/' + subCat.id + '/hidden/yes'}" method="post">
+                                <form th:action="${'categories/type/' + subCat.id + '/hidden/yes'}" method="post">
                                     <input type="submit" value="&#8864;" style="border: 0; background: none;" />
                                 </form>
                             </div>
                             <div th:if="${subCat.hidden == 'yes'}">
-                                <form th:action="${'categories/' + subCat.id + '/hidden/no'}" method="post">
+                                <form th:action="${'categories/type/' + subCat.id + '/hidden/no'}" method="post">
                                     <input type="submit" value="&#9744;" style="border: 0; background: none;" />
                                 </form>
                             </div>
                         </div>
                         <div th:text="${subCat.name}"></div>
-                        <div style="font-size: 8px;"><a th:href="${'categories/' + subCat.id + '/archive/' + item.id}">A</a></div>
-                        <div th:unless="${subCat.sortId == categoryTypeCount[item.id]}"><a th:href="'categories/' + ${subCat.categoryId} + '/' + ${subCat.sortId} + '/movedown'">&#8826;</a></div>
+                        <div style="font-size: 8px;"><a th:href="${'categories/type/' + subCat.id + '/archive/' + item.id}">A</a></div>
+                        <div th:unless="${subCat.sortId == categoryTypeCount[item.id]}"><a th:href="'categories/type/' + ${subCat.categoryId} + '/' + ${subCat.sortId} + '/movedown'">&#8826;</a></div>
+                    </div>
+                </div>
+            </div>
+            <br />
+            <div class="subItem styles">
+                styles:
+                <div th:each="subCat : ${styles}" th:style="${subCat.categoryId != item.id}? 'display: none;'">
+                    <div th:if="${subCat.categoryId == item.id}">
+                        <div th:unless="${subCat.sortId == 1}"><a th:href="'categories/style/' + ${subCat.categoryId} + '/' + ${subCat.sortId} + '/moveup'">&#8827;</a></div>
+                        <div>
+                            <div th:if="${subCat.hidden == 'no'}">
+                                <form th:action="${'categories/style/' + subCat.id + '/hidden/yes'}" method="post">
+                                    <input type="submit" value="&#8864;" style="border: 0; background: none;" />
+                                </form>
+                            </div>
+                            <div th:if="${subCat.hidden == 'yes'}">
+                                <form th:action="${'categories/style/' + subCat.id + '/hidden/no'}" method="post">
+                                    <input type="submit" value="&#9744;" style="border: 0; background: none;" />
+                                </form>
+                            </div>
+                        </div>
+                        <div th:text="${subCat.name}"></div>
+                        <div style="font-size: 8px;"><a th:href="${'categories/style/' + subCat.id + '/archive/' + item.id}">A</a></div>
+                        <div th:unless="${subCat.sortId == categoryTypeCount[item.id]}"><a th:href="'categories/style/' + ${subCat.categoryId} + '/' + ${subCat.sortId} + '/movedown'">&#8826;</a></div>
                     </div>
                 </div>
             </div>
