--- a/src/main/resources/templates/admin/archive.html
+++ b/src/main/resources/templates/admin/archive.html
@@ -8,6 +8,8 @@
 <div class="section_full">
     <div th:replace="fragments :: admin_menu"></div>
     <div id="admin_container">
+
+
         <div><h1 style="margin-left: 30px;">Categories:</h1></div>
         <div th:each="item : ${categories}">
             <div class="listItem" th:if="${item.archive == 'yes'}" style="background-color: #f7f6f6;">
@@ -18,11 +20,18 @@
                 <div>Contains :</div>
                 <div th:each="subCat : ${types}">
                     <div th:if="${subCat.categoryId == item.id}">
-                        <div th:text="${item.name + ': ' + subCat.name} + ', '"></div>
+                        <div th:text="${'sub-category: ' + subCat.name} + ', '"></div>
+                    </div>
+                </div>
+                <div th:each="style : ${styles}">
+                    <div th:if="${style.categoryId == item.id}">
+                        <div th:text="${'style: ' + style.name} + ', '"></div>
                     </div>
                 </div>
             </div>
         </div>
+
+
         <div><h1 style="margin-left: 30px;">Sub-categories:</h1></div>
         <div th:each="item : ${types}">
             <div class="listItem" th:if="${item.archive == 'yes'}" style="background-color: #f7f6f6;">
@@ -33,9 +42,10 @@
             </div>
             <div class="subItem" th:if="${item.archive == 'yes'}">
                 <div>Contains :</div>
-
             </div>
         </div>
+
+
         <div><h1 style="margin-left: 30px;">Styles:</h1></div>
         <div th:each="item : ${styles}">
             <div class="listItem" th:if="${item.archive == 'yes'}" style="background-color: #f7f6f6;">
@@ -46,9 +56,10 @@
             </div>
             <div class="subItem" th:if="${item.archive == 'yes'}">
                 <div>Contains :</div>
-
             </div>
         </div>
+
+
         <div><h1 style="margin-left: 30px;">Sizes:</h1></div>
         <div th:each="size : ${sizes}">
             <div class="listItem" th:if="${size.archive == 'yes'}" style="background-color: #f7f6f6;">
@@ -59,6 +70,19 @@
                 <div>Contains :</div>
             </div>
         </div>
+
+
+        <div><h1 style="margin-left: 30px;">Colors:</h1></div>
+        <div th:each="color : ${colors}">
+            <div class="listItem" th:if="${color.archive == 'yes'}" style="background-color: #f7f6f6;">
+                <a th:href="${'/data/delete/color/' + color.id}"><i class="fas fa-trash" style="position: absolute; margin: 10px 6px 0; color: red;"></i></a>
+                <div class="oneItem" style="margin-left: 25px;"><span th:text="${color.name}"></span><a th:href="${'colors/reactivate/' + color.id}">REACTIVATE</a></div>
+            </div>
+            <div class="subItem" th:if="${color.archive == 'yes'}">
+                <div>Contains :</div>
+            </div>
+        </div>
+
 
     </div>
 </div>
