--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -2,100 +2,12 @@
     text-decoration: none;
 }
 
-#admin_menu {
-    margin: 0;
-    padding: 10px 0 0;
-    display: inline-block;
-    width: 175px;
-}
-
-.admin_menu_button {
-    height: 34px;
-    font-size: 20px;
-    padding-top: 7px;
-    border-top: 1px solid #606060;
-    border-bottom: 1px solid #606060;
-}
-
-a .admin_menu_button:hover {
-  background-color: #e8f4f8;
-  border-right: 2px solid #e8f4f8;
-  border-left: 2px solid #e8f4f8;
-}
-
-#admin_container {
-    text-align: left;
-    margin: 0;
-    padding: 60px 0 0;
-    display: inline-block;
-    width: 840px;
-    min-height: 400px;
-}
-
-.active {
-    background-image: linear-gradient(to bottom right, #72bcd4, #add8e6);
-    color: #ffffff;
-    border: 2px solid #72bcd4;
-}
-
 #footer {
   margin-top: 0;
 }
 
 .section_full {
   margin: 0 auto;
-}
-
-.admin_text_box {
-    position: absolute;
-    display: block;
-    width: 600px;
-    height: 40px;
-    margin: 10px 0 0 20px;
-    padding: 0;
-    top: 400px;
-}
-
-.admin_text_box input {
-    position: absolute;
-    width: 590px;
-    height: 35px;
-    font-size: 26px;
-    text-align: right;
-    border: 0;
-    border-bottom: 2px solid #606060;
-}
-
-.admin_text_box div {
-    position: absolute;
-    height: 35px;
-    font-size: 26px;
-    font-weight: bold;
-    margin: 10px 0 0 15px;
-}
-
-.admin_submit_button {
-    display: block;
-    position: absolute;
-    top: 402px;
-    width: 200px;
-    height: 40px;
-    margin: 15px 0 0 620px;
-    padding: 0;
-}
-
-.admin_submit_button input {
-    width: 190px;
-    height: 30px;
-    font-size: 22px;
-    border: 2px solid #72bcd4;
-    border-radius: 15px;
-    background-image: linear-gradient(to bottom right, #72bcd4, #add8e6);
-    color: #ffffff;
-}
-
-.admin_submit_button input:hover, .subcategory_submit_button input:hover, .style_submit_button input:hover {
-    border: 2px solid #add8e6;
 }
 
 .listItem {
@@ -122,29 +34,6 @@ a .admin_menu_button:hover {
     display: inline-block;
     margin: 0;
     padding: 0;
-}
-
-.moveUp {
-    position: absolute;
-    height: 15px;
-    font-size: 10px;
-    margin: 3px 36px;
-    z-index: 3;
-}
-
-.moveDown {
-    position: absolute;
-    height: 15px;
-    font-size: 10px;
-    margin: 15px 36px;
-    z-index: 3;
-}
-
-.moveDiv {
-    position: absolute;
-    font-size: 11px;
-    margin: 8px 36px;
-    z-index: 2;
 }
 
 .oneItem {
@@ -236,6 +125,139 @@ a .admin_menu_button:hover {
     margin: -25px 0 0 651px;
 }
 
+/*************** ADD  FORMS ***************/
+
+.admin_text_box {
+    position: absolute;
+    display: block;
+    width: 600px;
+    height: 40px;
+    margin: 10px 0 0 20px;
+    padding: 0;
+    top: 400px;
+}
+
+.admin_text_box div {
+    position: absolute;
+    height: 35px;
+    font-size: 26px;
+    font-weight: bold;
+    margin: 10px 0 0 15px;
+}
+
+.admin_text_box input {
+    position: absolute;
+    width: 590px;
+    height: 35px;
+    font-size: 26px;
+    text-align: right;
+    border: 0;
+    border-bottom: 2px solid #606060;
+}
+
+.admin_submit_button {
+    display: block;
+    position: absolute;
+    top: 402px;
+    width: 200px;
+    height: 40px;
+    margin: 15px 0 0 620px;
+    padding: 0;
+}
+
+.admin_submit_button input {
+    width: 190px;
+    height: 30px;
+    font-size: 22px;
+    border: 2px solid #72bcd4;
+    border-radius: 15px;
+    background-image: linear-gradient(to bottom right, #72bcd4, #add8e6);
+    color: #ffffff;
+}
+
+.admin_submit_button input:hover, .subcategory_submit_button input:hover, .style_submit_button input:hover {
+    border: 2px solid #add8e6;
+}
+
+/************ ADMIN  CONTAINER ************/
+
+#admin_container {
+    text-align: left;
+    margin: 0;
+    padding: 60px 0 0;
+    display: inline-block;
+    width: 840px;
+    min-height: 400px;
+}
+
+/*************** ADMIN MENU ***************/
+
+.active {
+    background-image: linear-gradient(to bottom right, #72bcd4, #add8e6);
+    color: #ffffff;
+    border: 2px solid #72bcd4;
+}
+
+#admin_menu {
+    margin: 0;
+    padding: 10px 0 0;
+    display: inline-block;
+    width: 175px;
+}
+
+.admin_menu_button {
+    height: 34px;
+    font-size: 20px;
+    padding-top: 7px;
+    border-top: 1px solid #606060;
+    border-bottom: 1px solid #606060;
+}
+
+a .admin_menu_button:hover {
+  background-color: #e8f4f8;
+  border-right: 2px solid #e8f4f8;
+  border-left: 2px solid #e8f4f8;
+}
+
+/********** LIST ORDER (UP/DOWN) **********/
+
+.moveDiv {
+    position: absolute;
+    font-size: 11px;
+    margin: 8px 36px;
+    z-index: 2;
+}
+
+.moveDown {
+    position: absolute;
+    height: 15px;
+    font-size: 10px;
+    margin: 15px 36px;
+    z-index: 3;
+}
+
+.moveUp {
+    position: absolute;
+    height: 15px;
+    font-size: 10px;
+    margin: 3px 36px;
+    z-index: 3;
+}
+
+/************ PRODUCT SPECIFIC ************/
+
+.add_form {
+    display: none;
+    margin-left: 30px;
+    margin-top: 3px;
+    background-color: #ffffff;
+    height: 250px;
+    border-bottom: 2px solid #606060;
+    border-left: 0.5px solid #606060;
+    border-right: 0.5px solid #606060;
+    border-radius: 0 0 15px 15px;
+}
+
 #add_product {
     border-bottom: 2px solid #606060;
     height: 40px;
@@ -253,25 +275,24 @@ a .admin_menu_button:hover {
     display: block;
 }
 
-.add_form {
-    display: none;
-    margin-left: 30px;
-    margin-top: 3px;
-}
-
-.selection {
-    border: 0;
-    border-bottom: 1.5px solid black;
-    width: 395px;
-    height: 30px;
-    font-size: 18px;
-    font-weight: bold;
-    position: absolute;
-    display: inline-block;
-}
-
 .hidden_slc {
     display: none;
+}
+
+#sel_image, #sel_name, #sel_submit {
+    display: block;
+    position: absolute;
+    height: 40px;
+    margin-top: 95px;
+    margin-left: 3px;
+    border: 0;
+    border-bottom: 1.5px solid #606060;
+    font-size: 20px;
+    width: 803px;
+}
+
+#sel_name {
+    margin-top: 135px;
 }
 
 #sel_style {
@@ -287,41 +308,15 @@ a .admin_menu_button:hover {
     display: inline-block;
 }
 
-#sel_style div input {
-    width: 20px;
-    height: 20px;
-    border: 1px solid black;
-}
-
 #sel_style div div {
     font-weight: bold;
     margin-top: -1px;
 }
 
-#style_title {
-    display: flex;
-    position: absolute;
-    margin-top: 32px;
-    font-weight: bold;
-    font-size: 20px;
-    width: 810px;
-    justify-content: space-around;
-}
-
-#sel_image, #sel_name, #sel_submit {
-    display: block;
-    position: absolute;
-    width: 810px;
-    height: 40px;
-    margin-top: 95px;
-    border: 0;
-    border-bottom: 1.5px solid #606060;
-    font-size: 20px;
-    width: 810px;
-}
-
-#sel_name {
-    margin-top: 135px;
+#sel_style div input {
+    width: 20px;
+    height: 20px;
+    border: 1px solid black;
 }
 
 #sel_submit {
@@ -335,4 +330,53 @@ a .admin_menu_button:hover {
 #sel_submit:hover {
     border: 2px solid #add8e6;
     background-image: linear-gradient(to bottom right, #61abc3, #bee9f7);
+}
+
+#style_title {
+    display: flex;
+    position: absolute;
+    margin-top: 32px;
+    font-weight: bold;
+    font-size: 20px;
+    width: 808px;
+    justify-content: space-around;
+}
+
+.selection {
+    border: 0;
+    border-bottom: 1.5px solid black;
+    width: 395px;
+    height: 30px;
+    margin-left: 3px;
+    font-size: 18px;
+    font-weight: bold;
+    position: absolute;
+    display: inline-block;
+}
+
+.prodTitle {
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-left: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #ccddee;
+    border-bottom: 0.5px solid #606060;
+}
+
+.productImage {
+    display: block;
+    position: absolute;
+    margin-top: 5px;
+    margin-left: 40px;
+}
+
+.productList {
+    height: 24px;
+}
+
+.productOne {
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 70px;
 }
