--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,7 +23,7 @@
     <script style="display: none;">
         $(document).ready(function(){
             $('#add_product').click(function() {
-                $('.add_form').toggle("slide");
+                $('.add_form').toggle();
             });
         });
     </script>
@@ -65,7 +65,7 @@
                 <a th:href="'/store/' + ${menuItem.name}" th:text="${menuItem.name}"></a>
                 <div class="subMenu">
                     <span th:class="${'subMenuClass' + menuItem.id}">
-                        <a th:each="subMenuItem : ${subMenuItems}" th:href="${subMenuItem.categoryId == menuItem.id}? ${'/store/' + menuItem.name + '/' + subMenuItem.name}" th:text="${subMenuItem.categoryId == menuItem.id}? ${subMenuItem.name + '&nbsp;&nbsp;&nbsp;&nbsp;'}" th:unless="${subMenuItem.categoryId != menuItem.id}? 'display: none;'"></a>
+                        <a th:each="subMenuItem : ${subMenuItems}" th:href="${subMenuItem.category.id == menuItem.id}? ${'/store/' + menuItem.name + '/' + subMenuItem.name}" th:text="${subMenuItem.category.id == menuItem.id}? ${subMenuItem.name + '&nbsp;&nbsp;&nbsp;&nbsp;'}" th:unless="${subMenuItem.category.id != menuItem.id}? 'display: none;'"></a>
                     </span>
                 </div>
             </span>
