added security with oauth2. Linked app to Google for Google Login.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -49,7 +49,7 @@
             <div class="divide txt_white">|</div>
             <div class="link txt_white">Contact</div>
             <div class="divide txt_white">|</div>
-            <div class="link txt_white">Login</div>
+            <a th:href="@{'/user'}"><div class="link txt_white">Login</div></a>
         </div>
         <div id="cart">
             <i class="fas fa-shopping-cart cart"></i>
